[gd_scene load_steps=4 format=3 uid="uid://cbvitk0tws21e"]

[ext_resource type="Script" uid="uid://rfrlb715t84a" path="res://scenes/game.gd" id="1_lnu2h"]
[ext_resource type="PackedScene" uid="uid://b8vlxuq37kacv" path="res://components/lane.tscn" id="1_uwrxv"]
[ext_resource type="Texture2D" uid="uid://whsegdldubtd" path="res://textures/common/base_circle.svg" id="2_yqjtg"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_lnu2h")

[node name="Lanes" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 40.0
offset_top = 40.0
offset_right = 920.0
offset_bottom = 680.0
theme_override_constants/separation = 0

[node name="Lane" parent="Lanes" instance=ExtResource("1_uwrxv")]
layout_mode = 2

[node name="Lane2" parent="Lanes" instance=ExtResource("1_uwrxv")]
layout_mode = 2

[node name="Lane3" parent="Lanes" instance=ExtResource("1_uwrxv")]
layout_mode = 2

[node name="Lane4" parent="Lanes" instance=ExtResource("1_uwrxv")]
layout_mode = 2

[node name="Lane5" parent="Lanes" instance=ExtResource("1_uwrxv")]
layout_mode = 2

[node name="Lane6" parent="Lanes" instance=ExtResource("1_uwrxv")]
layout_mode = 2

[node name="Lane7" parent="Lanes" instance=ExtResource("1_uwrxv")]
layout_mode = 2

[node name="Lane8" parent="Lanes" instance=ExtResource("1_uwrxv")]
layout_mode = 2

[node name="Lane9" parent="Lanes" instance=ExtResource("1_uwrxv")]
layout_mode = 2

[node name="Lane10" parent="Lanes" instance=ExtResource("1_uwrxv")]
layout_mode = 2

[node name="Lane11" parent="Lanes" instance=ExtResource("1_uwrxv")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 40.0
offset_right = 1240.0
offset_bottom = 120.0
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "×"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "×"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "×"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "×"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label5" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "×"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label6" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "×"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label7" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "×"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label8" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "×"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label9" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "×"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label10" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "×"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label11" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "="
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelScore2" type="Label" parent="."]
custom_minimum_size = Vector2(320, 80)
layout_mode = 0
offset_left = 920.0
offset_top = 40.0
offset_right = 1240.0
offset_bottom = 120.0
text = "Score"
horizontal_alignment = 2

[node name="LabelScore" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 80)
layout_mode = 0
offset_left = 920.0
offset_top = 40.0
offset_right = 1240.0
offset_bottom = 120.0
theme_override_font_sizes/font_size = 48
text = "999,999,999"
horizontal_alignment = 2
vertical_alignment = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 960.0
offset_top = 124.0
offset_right = 1240.0
offset_bottom = 126.0

[node name="LabelTarget2" type="Label" parent="."]
custom_minimum_size = Vector2(320, 80)
layout_mode = 0
offset_left = 920.0
offset_top = 130.0
offset_right = 1240.0
offset_bottom = 210.0
text = "Target"
horizontal_alignment = 2

[node name="LabelTarget" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 80)
layout_mode = 0
offset_left = 920.0
offset_top = 130.0
offset_right = 1240.0
offset_bottom = 210.0
theme_override_font_sizes/font_size = 48
text = "999,999,999"
horizontal_alignment = 2
vertical_alignment = 2

[node name="LabelPhase2" type="Label" parent="."]
custom_minimum_size = Vector2(320, 80)
layout_mode = 0
offset_left = 920.0
offset_top = 280.0
offset_right = 1240.0
offset_bottom = 360.0
text = "Phase"
horizontal_alignment = 2

[node name="LabelPhase" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 80)
layout_mode = 0
offset_left = 920.0
offset_top = 280.0
offset_right = 1240.0
offset_bottom = 360.0
theme_override_font_sizes/font_size = 48
text = "99/99"
horizontal_alignment = 2
vertical_alignment = 2

[node name="LabelStage2" type="Label" parent="."]
custom_minimum_size = Vector2(320, 80)
layout_mode = 0
offset_left = 920.0
offset_top = 360.0
offset_right = 1240.0
offset_bottom = 440.0
text = "Stage"
horizontal_alignment = 2

[node name="LabelStage" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 80)
layout_mode = 0
offset_left = 920.0
offset_top = 360.0
offset_right = 1240.0
offset_bottom = 440.0
theme_override_font_sizes/font_size = 48
text = "99/99"
horizontal_alignment = 2
vertical_alignment = 2

[node name="ButtonRoll" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 50.0
offset_top = 530.0
offset_right = 190.0
offset_bottom = 670.0
theme_override_font_sizes/font_size = 32
text = "Roll
Dice"

[node name="ButtonEnd" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 210.0
offset_top = 530.0
offset_right = 350.0
offset_bottom = 670.0
theme_override_font_sizes/font_size = 32
text = "End
Phase"

[node name="RerollLamps" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 70.0
offset_top = 680.0
offset_right = 170.0
offset_bottom = 700.0
theme_override_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="RerollLamps"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("2_yqjtg")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="RerollLamps"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("2_yqjtg")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="RerollLamps"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("2_yqjtg")
expand_mode = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 610.0
offset_top = 530.0
offset_right = 750.0
offset_bottom = 670.0

[node name="LabelDiceA" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 96
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel2" type="Panel" parent="."]
layout_mode = 0
offset_left = 770.0
offset_top = 530.0
offset_right = 910.0
offset_bottom = 670.0

[node name="LabelDiceB" type="Label" parent="Panel2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 96
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelTitle" type="Label" parent="."]
custom_minimum_size = Vector2(320, 80)
layout_mode = 0
offset_left = 920.0
offset_top = 600.0
offset_right = 1240.0
offset_bottom = 680.0
theme_override_font_sizes/font_size = 48
text = "EDICED"
horizontal_alignment = 2

[node name="LabelVersion" type="Label" parent="."]
custom_minimum_size = Vector2(320, 80)
layout_mode = 0
offset_left = 920.0
offset_top = 600.0
offset_right = 1240.0
offset_bottom = 680.0
text = "v0.0.0"
horizontal_alignment = 2
vertical_alignment = 2
